# yolov5s_demo

./: CMakeLists.txt  README
include/MNN/: VCS.h
lib/: libMNN.dylib
source/: yolo_demo.cpp
